[project]
name = "fixbackup"
version = "0.0.10"
authors = [{name="Some Engineering Inc."}]
description = "FIX Database Backup System"
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    # Supported python versions
    "Programming Language :: Python :: 3.9",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}
keywords = ["cloud security"]

dependencies = [
    "boto3",
]

[project.scripts]
fixbackup = "fixbackup.__main__:main"

[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "flake8",
    "hypothesis",
    "mypy",
    "pep8-naming",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-runner",
    "tox",
    "wheel",
]

[project.urls]
Documentation = "https://some.engineering"
Source = "https://github.com/someengineering/fixbackup"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"
